# schnorr-signature

./: .gitignore  README.md  keygen.py  main.py  paramgen.py  prime.py  pyproject.toml  signature.py  test.py  test_vectors.sh
benchmarks/: README.md
test_vectors/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
