[project]
name = "schnorr-signature"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.ruff]
line-length = 140
 
[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
]
ignore = ["E501"]
